[package]
name = "rbr_ferrisp_workshop"
version = "0.1.0"
authors = ["elias <elias.jm.garcia@gmail.com>"]
edition = "2018"

[[bin]]
name = "ferrisp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "5.0.3"
nom = "5.0.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"